--- a/Hannon.Utils.csproj
+++ b/Hannon.Utils.csproj
@@ -36,6 +36,7 @@
       <HintPath>..\Hannon.ECommerce\packages\Microsoft.Web.Infrastructure.1.0.0.0\lib\net40\Microsoft.Web.Infrastructure.dll</HintPath>
     </Reference>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.Web" />
@@ -67,6 +68,7 @@
   <ItemGroup>
     <Compile Include="ArgumentValidator.cs" />
     <Compile Include="CardTypeInfo.cs" />
+    <Compile Include="MaxWordsAttribute.cs" />
     <Compile Include="EmailTemplates.cs" />
     <Compile Include="ExceptionMessage.cs" />
     <Compile Include="Extension40.cs" />
